[tool.poetry]
name = "ef-hackaton"
version = "0.1.0"
description = ""
authors = ["Shahan Neda <shahan.neda@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.3.3"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
