[tool.poetry]
name = "ef-hackaton"
version = "0.1.0"
description = ""
authors = ["Shahan Neda <shahan.neda@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.3.3"
python-dotenv = "^1.0.0"
opencv-python = "^4.8.1.78"
requests = "^2.31.0"
elevenlabs = "^0.2.26"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
