[tool.poetry]
name = "ef-hackaton"
version = "0.1.0"
description = ""
authors = ["Shahan Neda <shahan.neda@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.3.3"
python-dotenv = "^1.0.0"
opencv-python = "^4.8.1.78"
requests = "^2.31.0"
elevenlabs = "^0.2.26"
speechrecognition = "^3.10.0"
pyttsx3 = "^2.90"
pyaudio = "^0.2.14"
soundfile = "^0.12.1"
keyboard = "^0.13.5"
sounddevice = "^0.4.6"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
